# 1flowbase-official-plugins

./: .gitignore  README.md  official-registry.json
agent-flow/: README.md
capability-plugins/: README.md
host-extensions/: README.md
mcp/: catalog.json
models/openai_compatible/: Cargo.toml  manifest.yaml
models/openai_compatible/demo/: index.html
models/openai_compatible/i18n/: en_US.json  zh_Hans.json
models/openai_compatible/models/llm/: _position.yaml  openai_compatible_chat.yaml
models/openai_compatible/provider/: openai_compatible.js  openai_compatible.yaml
models/openai_compatible/provider/_tests/: openai_compatible.test.mjs
models/openai_compatible/readme/: README_en_US.md
models/openai_compatible/src/: lib.rs  main.rs
runtime-extensions/: README.md
runtime-extensions/model-providers/aliyun_bailian/: Cargo.toml  manifest.yaml
runtime-extensions/model-providers/aliyun_bailian/i18n/: en_US.json  zh_Hans.json
runtime-extensions/model-providers/aliyun_bailian/models/llm/: _position.yaml  qwen-plus.yaml  qwen3-vl-plus.yaml  qwen3.6-plus-2026-04-02.yaml  qwen3.6-plus.yaml
runtime-extensions/model-providers/aliyun_bailian/provider/: aliyun_bailian.yaml
runtime-extensions/model-providers/aliyun_bailian/readme/: README_en_US.md
runtime-extensions/model-providers/aliyun_bailian/src/: lib.rs  main.rs  stream.rs  tests.rs
runtime-extensions/model-providers/aliyun_bailian/tests/: stdio_worker.rs
runtime-extensions/model-providers/openai/: Cargo.toml  manifest.yaml
runtime-extensions/model-providers/openai/demo/: index.html  styles.css
runtime-extensions/model-providers/openai/i18n/: en_US.json  zh_Hans.json
runtime-extensions/model-providers/openai/models/llm/: _position.yaml  gpt-5-mini.yaml  gpt-5.1.yaml  gpt-5.2.yaml  gpt-5.4.yaml  gpt-5.5.yaml
runtime-extensions/model-providers/openai/provider/: openai.yaml
runtime-extensions/model-providers/openai/readme/: README_en_US.md
runtime-extensions/model-providers/openai/scripts/: demo.runner.example.json
runtime-extensions/model-providers/openai/src/: lib.rs  main.rs
runtime-extensions/model-providers/openai/tests/: stdio_worker.rs
runtime-extensions/model-providers/openai_compatible/: Cargo.toml  manifest.yaml
runtime-extensions/model-providers/openai_compatible/demo/: app.js  index.html
runtime-extensions/model-providers/openai_compatible/i18n/: en_US.json  zh_Hans.json
runtime-extensions/model-providers/openai_compatible/provider/: openai_compatible.yaml
runtime-extensions/model-providers/openai_compatible/readme/: README_en_US.md
runtime-extensions/model-providers/openai_compatible/scripts/: demo.runner.example.json
runtime-extensions/model-providers/openai_compatible/src/: lib.rs  main.rs
scripts/: build-registry-entry.mjs  detect-mcp-version-releases.mjs  detect-version-releases.mjs  list-provider-package-targets.mjs  set-mcp-artifact-checksum.mjs  sort-provider-parameter-order.mjs  sync-main.mjs  sync-provider-manifest-versions.mjs  update-agent-flow-catalog.mjs  (+2 more)
(+80 files in other folders)
