[package]
name = "openai_compatible-provider"
version = "0.3.0"
edition = "2021"

[lib]
name = "openai_compatible_provider"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
