[package]
name = "aliyun_bailian-provider"
# Cargo requires a package version, but plugin release version is sourced from manifest.yaml.
version = "0.0.0"
edition = "2021"

[[bin]]
name = "aliyun_bailian-provider"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "io-std"] }

[lib]
name = "aliyun_bailian_provider"
path = "src/lib.rs"
