[package]
name = "openai-provider"
# Cargo requires a package version, but plugin release version is sourced from manifest.yaml.
version = "0.0.0"
edition = "2021"

[lib]
name = "openai_provider"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
